added a controller as requested

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -4,5 +4,6 @@ Metrics/LineLength:
 
 # Too short methods lead to extraction of single-use methods, which can make
 # the code easier to read (by naming things), but can also clutter the class
-Metrics/MethodLength: 
+Metrics/MethodLength:
+  Include: ["app/controllers/*"]
   Max: 20
