--- a/ruby/rails/.rubocop.yml
+++ b/ruby/rails/.rubocop.yml
@@ -10,5 +10,5 @@ Metrics/MethodLength:
 
 # Exceptions for RSpec files.
 Metrics/BlockLength:
-  ExcludedMethods: ['describe']
+  ExcludedMethods: ['describe', 'guard']
   
