Fix JavaScript and React/Redux config
- Remove React Plugin from JavaScript config and add rules
- Create config for React/Redux projects

--- a/javascript/eslint.config
+++ b/javascript/eslint.config
@@ -1,6 +1,10 @@
 {
   "parserOptions": { "ecmaVersion": 6 },
-  "extends": ["airbnb", "plugin:react/recommended"],
-  "plugins": ["react"]
+  "extends": "airbnb-base",
+    rules: {
+    'no-shadow': 0,
+    'no-param-reassign': 0,
+    'eol-last': 0,
+  }
 }
 
