Update .sticklet.yml with full documentation site
Update .stickler.yml to enable the fixers and added some helpful comments. Fixed some syntax errors and added the stickler web site as a comment to find more documentation.

--- a/css/.stickler.yml
+++ b/css/.stickler.yml
@@ -1,3 +1,20 @@
+# add the linters you want stickler to use for this project
 linters:
   stylelint:
+    # indicate where is the config file for stylelint
     config: 'stylelint.config.js'
+    # allow stylelint to use the fix feature 
+    fixer: true
+
+# add the files here you want to be ignored by stylelint
+# the lines below show that the file normalize.css will
+# be ignored during the checks
+files:
+    ignore:
+        - 'normalize.css'
+        
+# globally enable the fixers for this project        
+fixers:
+    enable: true
+    
+# find full documentation here: https://stickler-ci.com/docs
