exclude node_modules in Rails 6

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -5,6 +5,7 @@ AllCops:
     - "config/**/*"
     - "Guardfile"
     - "Rakefile"
+    - "node_modules/**/*"
   DisplayCopNames: true
 
 Metrics/LineLength:
@@ -18,7 +19,7 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
-  ExcludedMethods: ['describe']
+  ExcludedMethods: ["describe"]
 
 Style/Documentation:
   Enabled: false
