add exclusion in stickler.yml

--- a/ruby/.stickler.yml
+++ b/ruby/.stickler.yml
@@ -1,6 +1,7 @@
 linters:
   rubocop:
     display_cop_names: true
+    config: "./rubocop.yml"
 files:
   ignore:
     - "bin/*"
@@ -8,3 +9,4 @@ files:
     - "config/*"
     - "Guardfile"
     - "Rakefile"
+    - "node_modules/**/*"
