--- a/ruby/.stickler.yml
+++ b/ruby/.stickler.yml
@@ -1,6 +1,7 @@
 linters:
   rubocop:
     display_cop_names: true
+    # indicate where is the config file for stylelint
     config: "./rubocop.yml"
 files:
   ignore:
