--- a/ruby/.stickler.yml
+++ b/ruby/.stickler.yml
@@ -10,7 +10,10 @@ files:
     - "bin/*"
     - "db/*"
     - "config/*"
-    - "Guardfile"
+    - "Guardfile"s
     - "Rakefile"
     - "node_modules/**/*"
 
+# PLEASE DO NOT enable auto fixing options
+# if you need extra support from you linter - do it in your local env as described in README for this config
+# find full documentation here: https://stickler-ci.com/docs
