Fixed the obsolete configuration from 'Layout/AlignHash' to 'Layout/HashAlignment'

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -18,14 +18,14 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
-  ExcludedMethods: ['describe']
+  ExcludedMethods: ["describe"]
 
 Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
   Enabled: false
 
-Layout/AlignHash:
+Layout/HashAlignment:
   EnforcedColonStyle: key
 Layout/ExtraSpacing:
   AllowForAlignment: false
