separating Ruby and ROR rubocop configs

--- a/ror/.stickler.yml
+++ b/ror/.stickler.yml
@@ -8,6 +8,9 @@ linters:
 # add the files here you want to be ignored by stylelint
 files:
   ignore:
+    - "bin/*"
+    - "db/*"
+    - "config/*"
     - "Guardfile"
     - "Rakefile"
 
