--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -1,29 +1,33 @@
 AllCops:
   Exclude:
-    - "bin/*"
-    - "db/**/*"
-    - "config/**/*"
-    - "Guardfile"
-    - "Rakefile"
+    - "README.md"
+
   DisplayCopNames: true
 
 Metrics/LineLength:
   Max: 120
 Metrics/MethodLength:
-  Include: ["app/controllers/*"]
   Max: 20
 Metrics/AbcSize:
-  Include: ["app/controllers/*"]
-  Max: 30
+  Max: 50
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
   ExcludedMethods: ['describe']
+  Max: 30
 
 Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
   Enabled: false
+Style/EachForSimpleLoop:
+  Enabled: false
+Style/AndOr:
+  Enabled: false
+Style/DefWithParentheses:
+  Enabled: false
+Style/FrozenStringLiteralComment:
+  EnforcedStyle: never
 
 Layout/AlignHash:
   EnforcedColonStyle: key
