🐛 Use eslint.config to extend eslintrc.json

--- a/react-redux/.stickler.yml
+++ b/react-redux/.stickler.yml
@@ -2,11 +2,7 @@
 linters:
   eslint:
     # indicate where is the config file for stylelint
-    config: './.eslintrc.json'
-    # disable the import/no-unresolved rule from stickler only
-    rules: {
-      "import/no-unresolved": "off"
-    }
+    config: './.eslint.config'
 
 # PLEASE DO NOT enable auto fixing options
 # if you need extra support from you linter - do it in your local env as described in README for this config
