Specify environments for predefined global variables

--- a/javascript/eslint.config
+++ b/javascript/eslint.config
@@ -1,4 +1,9 @@
 {
+  "env": {
+      "browser": true,
+      "es6": true,
+      "jest": true
+    },
   "parserOptions": { "ecmaVersion": 2018 },
   "extends": "airbnb-base",
     rules: {
@@ -6,5 +11,4 @@
     'no-param-reassign': 0,
     'eol-last': 0,
   }
-}
-
+} 
