--- a/ror/.stickler.yml
+++ b/ror/.stickler.yml
@@ -13,6 +13,7 @@ files:
     - "config/*"
     - "Guardfile"
     - "Rakefile"
+    - "README.md"
 
 # PLEASE DO NOT enable auto fixing options
 # if you need extra support from you linter - do it in your local env as described in README for this config
