Change Metrics/LineLength to Layout/LineLength
Stickler is giving errors with LineLength using the "Metrics" namespace, but moving the LineLength property to the Layout namespace fixes that.

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -8,8 +8,6 @@ AllCops:
     - "node_modules/**/*"
   DisplayCopNames: true
 
-Metrics/LineLength:
-  Max: 120
 Metrics/MethodLength:
   Include: ["app/controllers/*"]
   Max: 20
@@ -31,3 +29,5 @@ Layout/ExtraSpacing:
 Layout/MultilineMethodCallIndentation:
   Enabled: true
   EnforcedStyle: indented
+Layout/LineLength:
+  Max: 120
