Adding Layout/HashAlignment cop

--- a/ruby/.rubocop.yml
+++ b/ruby/.rubocop.yml
@@ -32,6 +32,8 @@ Style/DefWithParentheses:
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 
+Layout/HashAlignment:
+  EnforcedColonStyle: key
 Layout/ExtraSpacing:
   AllowForAlignment: false
 Layout/MultilineMethodCallIndentation:
