Changes to the rules to be consistent with stickler errors.

--- a/javascript/.eslintrc.json
+++ b/javascript/.eslintrc.json
@@ -12,6 +12,7 @@
   "rules": {
     "no-shadow": "off",
     "no-param-reassign": "off",
-    "eol-last": "off"
+    "eol-last": "off",
+    "arrow-parens": "off"
   }
 }
