--- a/react-redux/.eslintrc.json
+++ b/react-redux/.eslintrc.json
@@ -16,6 +16,7 @@
   "rules": {
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "import/no-unresolved": "off",
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "arrow-parens":"off"
   }
 }
