turn on arrow-parens rule, to enforce style

--- a/react-redux/.eslintrc.json
+++ b/react-redux/.eslintrc.json
@@ -17,6 +17,6 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "import/no-unresolved": "off",
     "no-shadow": "off",
-    "arrow-parens":"off"
+    "arrow-parens": ["error", "as-needed"]
   }
 }
