--- a/javascript/.stickler.yml
+++ b/javascript/.stickler.yml
@@ -1,5 +1,7 @@
 # add the linters you want stickler to use for this project
+---
 linters:
+  flake8:
   eslint:
     # indicate where is the config file for stylelint
     config: './.eslintrc.json'
