[Update] Updated linter check to allow ternary nesting

--- a/javascript/.eslintrc.json
+++ b/javascript/.eslintrc.json
@@ -13,6 +13,7 @@
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
-    "arrow-parens": "off"
+    "arrow-parens": "off",
+    "no-nested-ternary" : "off"
   }
 }
