Add GHA for JavaScript

--- a/javascript/.eslintrc.json
+++ b/javascript/.eslintrc.json
@@ -14,5 +14,9 @@
     "no-param-reassign": "off",
     "eol-last": "off",
     "arrow-parens": "off"
-  }
+  },
+  "ignorePatterns": [
+    "dist/",
+    "build/"
+  ]
 }
