--- a/javascript/.stylelintrc.json
+++ b/javascript/.stylelintrc.json
@@ -6,6 +6,8 @@
     "scss/at-rule-no-unknown": true
   },
   "ignoreFiles": [
+    "build/**",
+    "dist/**",
     "**/reset*.css",
     "**/bootstrap*.css"
   ]
