--- a/ror/.stylelintrc.json
+++ b/ror/.stylelintrc.json
@@ -4,5 +4,11 @@
   "rules": {
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true
-  }
+  },
+  "ignoreFiles": [
+    "build/**",
+    "dist/**",
+    "**/reset*.css",
+    "**/bootstrap*.css"
+  ]
 }
