Update linter's workflow for Ruby on Rails
The official recommendation is to use the latest stable version of the 
linters for new projects. Since this repository is mainly used for new 
projects, it should stick to the recommendation.

By removing the explicit version from the workflow, new projects based 
on this repository will use the linter's latest version by default. This 
helps to:
  1. Remove the discrepancy between the development machine using a 
newer version and the workflow using an older version.
  2. Avoid the need to constantly updating this file to change the 
linter's version.
  3. Stick to the recommendation by using the latest stable version by 
default for new projects.

--- a/ror/.rubocop.yml
+++ b/ror/.rubocop.yml
@@ -1,16 +1,14 @@
 AllCops:
   Exclude:
     - "db/**/*"
-    - "bin/*" 
+    - "bin/*"
     - "config/**/*"
     - "Guardfile"
     - "Rakefile"
     - "node_modules/**/*"
-
   DisplayCopNames: true
+  NewCops: enable
 
-Layout/LineLength:
-  Max: 120
 Metrics/MethodLength:
   Include:
     - "app/controllers/*"
@@ -24,7 +22,7 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
-  ExcludedMethods: ['describe']
+  IgnoredMethods: ['describe']
   Max: 30
 
 Style/Documentation:
@@ -39,7 +37,15 @@ Style/DefWithParentheses:
   Enabled: false
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
+Style/HashEachMethods:
+  Enabled: false
+Style/HashTransformKeys:
+  Enabled: false
+Style/HashTransformValues:
+  Enabled: false
 
+Layout/LineLength:
+  Max: 120
 Layout/HashAlignment:
   EnforcedColonStyle: key
 Layout/ExtraSpacing:
@@ -47,13 +53,8 @@ Layout/ExtraSpacing:
 Layout/MultilineMethodCallIndentation:
   Enabled: true
   EnforcedStyle: indented
+
 Lint/RaiseException:
   Enabled: false
 Lint/StructNewOverride:
-  Enabled: false
-Style/HashEachMethods:
-  Enabled: false
-Style/HashTransformKeys:
-  Enabled: false
-Style/HashTransformValues:
   Enabled: false
