--- a/react-redux/.stylelintrc.json
+++ b/react-redux/.stylelintrc.json
@@ -6,5 +6,5 @@
     "scss/at-rule-no-unknown": true,
     "csstree/validator": true
   },
-  "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css"]
+  "ignoreFiles": ["build/**", "public/**", "package.json", "dist/**", "**/reset*.css", "**/bootstrap*.css"]
 }
