--- a/html-css/.hintrc
+++ b/html-css/.hintrc
@@ -12,6 +12,7 @@
     "disown-opener",
     "html-checker",
     "meta-charset-utf-8",
-    "meta-viewport"
+    "meta-viewport",
+    "inline-style-disabled"
   ]
 }
