Change no-inline-styles to error

--- a/html-css/.hintrc
+++ b/html-css/.hintrc
@@ -13,6 +13,6 @@
     "html-checker",
     "meta-charset-utf-8",
     "meta-viewport",
-    "no-inline-styles"
+    "no-inline-styles:error"
   ]
 }
