Fix gems versions

--- a/ruby/.github/workflows/linters.yml
+++ b/ruby/.github/workflows/linters.yml
@@ -14,7 +14,7 @@ jobs:
           ruby-version: ">=3.0.x"
       - name: Setup Rubocop
         run: |
-          gem install --no-document rubocop:'>= 1.0, < 2.0' # https://docs.rubocop.org/en/stable/installation/
+          gem install --no-document rubocop:'>= 1.0', '< 2.0' # https://docs.rubocop.org/en/stable/installation/
           [ -f .rubocop.yml ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ruby/.rubocop.yml
       - name: Rubocop Report
         run: rubocop --color
