--- a/ror/.github/workflows/linters.yml
+++ b/ror/.github/workflows/linters.yml
@@ -16,7 +16,7 @@ jobs:
           ruby-version: 3.0.x
       - name: Setup Rubocop
         run: |
-          gem install --no-document rubocop:'>= 1.0', '< 2.0' # https://docs.rubocop.org/en/stable/installation/
+          gem install --no-document rubocop -v '>= 1.0, < 2.0' # https://docs.rubocop.org/en/stable/installation/
           [ -f .rubocop.yml ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/ror/.rubocop.yml
       - name: Rubocop Report
         run: rubocop --color
