Add rule to prevent eslint error on param reassign
Recommended by the official RTK docs: https://redux-toolkit.js.org/usage/immer-reducers#linting-state-mutations

--- a/react-redux/.eslintrc.json
+++ b/react-redux/.eslintrc.json
@@ -20,6 +20,13 @@
     "import/no-unresolved": "off",
     "no-shadow": "off"
   },
+  "overrides": [
+    {
+      "files": ["src/**/*Slice.js"],
+      // avoid state param assignment
+      "rules": { "no-param-reassign": ["error", { "props": false }] }
+    }
+  ],
   "ignorePatterns": [
     "dist/",
     "build/"
