--- a/react-redux/.eslintrc.json
+++ b/react-redux/.eslintrc.json
@@ -22,6 +22,7 @@
   },
   "overrides": [
     {
+       // feel free to replace with your preferred file pattern - eg. 'src/**/*Slice.js' or 'redux/**/*Slice.js'
       "files": ["src/**/*Slice.js"],
       // avoid state param assignment
       "rules": { "no-param-reassign": ["error", { "props": false }] }
