--- a/html-css-js/.github/workflows/linters.yml
+++ b/html-css-js/.github/workflows/linters.yml
@@ -56,7 +56,7 @@ jobs:
           node-version: "18.x"
       - name: Setup ESLint
         run: |
-          npm install --save-dev eslint@8.x eslint-config-airbnb-base@15.x eslint-plugin-import@2.x babel-eslint@10.x
+          npm install --save-dev eslint@8.x eslint-config-airbnb-base@15.x eslint-plugin-import@2.x @babel/eslint-parser@7.x
           [ -f .eslintrc.json ] || wget https://raw.githubusercontent.com/microverseinc/linters-config/master/html-css-js/.eslintrc.json
       - name: ESLint Report
         run: npx eslint .
